--- a/QAP3/views/partials/nav.ejs
+++ b/QAP3/views/partials/nav.ejs
@@ -1,8 +1,8 @@
 <nav>
-    <h1>Week Ten</h1>
-    <h2>A multi-tiered approach!</h2>
-    <a href="/">[home]</a>
-    <a href="/stores">[stores]</a>
-    <a href="/languages">[languages]</a>
-    <a href="/about">[about]</a>
+	<h1>DVD Rentals</h1>
+	<!-- <h2>We have what you need!</h2> -->
+	<a href="/">[home]</a>
+	<a href="/stores">[stores]</a>
+	<a href="/rentalFilms">[Rental Films]</a>
+	<!-- <a href="/about">[about]</a> -->
 </nav>
