--- a/QAP3/views/storedetails.ejs
+++ b/QAP3/views/storedetails.ejs
@@ -14,15 +14,15 @@
                 </p> 
             <% } %>
             <div class="dropdown">
-            </br>Best earners by Store and Language(s):</br>
-                <button class="dropbtn">Languages</button>
+            </br>Best earners by Store and film(s):</br> 
+                <button class="dropbtn">film</button>
                 <div class="dropdown-content">
-                    <% if (languages.length > 0) { %>
-                        <% languages.forEach(language => { %> 
-                            <% if (language.name === 'All') { %>
-                                <a href="<%= store.store_id%>"><%= language.name %></a>
+                    <% if (rentalFilms.length > 0) { %>
+                        <% rentalFilms.forEach(film => { %> 
+                            <% if (film.title === 'All') { %>
+                                <a href="<%= store.store_id%>"><%= film.title %></a>
                             <% } else { %>
-                                <a href="?language=<%= language.name%>"><%= language.name %></a>
+                                <a href="?film=<%= film.title %>"><%= film.title %></a>
                             <% } %>
                         <% }) %>
                     <% } %>
@@ -30,11 +30,11 @@
             </div>
             <div class="revenue content">
                 <% if (revenue.length > 0) { %>
-                    <b><%= language%></b>
+                    <b><%= film%></b>
                     <% revenue.forEach(rev => { %>
                         <p class="films">
                             <%= rev.title%>, <%= rev.monies%>
-                            <% if (language === undefined) { %> - <%= rev.name %> <% }; %>
+                            <% if (film === undefined) { %> - <%= rev.name %> <% }; %>
                         </p> 
                     <% }) %>
                 <% } %>
