--- a/QAP3/public/styles.css
+++ b/QAP3/public/styles.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 body {
 	max-width: 1200px;
 	margin: 20px auto;
 	padding: 0 20px;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	max-width: 1200px;
+	background-color: #212121;
 }
 a:hover {
 	color: grey;
@@ -18,7 +19,13 @@ ul {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
-	color: #222;
+	color: #f4f4f4;
+}
+b {
+	font-size: 1.5em;
+	font-weight: bold;
+	color: #fff;
+	text-decoration: underline;
 }
 /* nav & footer styles */
 nav {
@@ -91,34 +98,34 @@ textarea {
 	font-size: 1.2em;
 	cursor: pointer;
 }
-.dropbtn {
+/* .dropbtn {
 	background-color: #04aa6d;
 	color: white;
 	padding: 8px;
 	font-size: 12px;
 	border: none;
-}
+} */
 
-.dropdown {
+/* .dropdown {
 	position: relative;
 	display: inline-block;
-}
+} */
 
-.dropdown-content {
+/* .dropdown-content {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
 	min-width: 120px;
 	box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
 	z-index: 1;
-}
+} */
 
-.dropdown-content a {
-	color: black;
+/* .dropdown-content a {
+	color: #fff;
 	padding: 6px 8px;
 	text-decoration: none;
 	display: block;
-}
+} */
 
 .dropdown-content a:hover {
 	background-color: #ddd;
