--- a/QAP3/views/partials/nav.ejs
+++ b/QAP3/views/partials/nav.ejs
@@ -3,6 +3,6 @@
 	<!-- <h2>We have what you need!</h2> -->
 	<a href="/">[home]</a>
 	<a href="/stores">[stores]</a>
-	<a href="/rentalFilms">[Rental Films]</a>
+	<!-- <a href="/rentalFilms">[Rental Films]</a> -->
 	<!-- <a href="/about">[about]</a> -->
 </nav>
