--- a/QAP3/views/home.ejs
+++ b/QAP3/views/home.ejs
@@ -3,6 +3,15 @@
 	<body>
 		<%- include('./partials/nav.ejs') %>
 		<p>Hello this is some plain text.</p>
+
+		<div class="images">
+			<img src="/QAP3/media/dune.jpg" alt="Dune" />
+			<img src="/QAP3/media/the_advengers.jpg" alt="The Advengers" />
+			<img src="/QAP3/media/the_dark_knight.jpg" alt="The Dark Knight" />
+			<img src="/QAP3/media/the_joker.jpg" alt="Joker" />
+			<img src="/QAP3/media/the_matrix.jpg" alt="The Matrix" />
+			<img src="/QAP3/media/Star_wars.jpg" alt="Star Wars" />
+		</div>
 	</body>
 	<%- include('./partials/footer.ejs') %>
 </html>
