--- a/QAP3/views/home.ejs
+++ b/QAP3/views/home.ejs
@@ -2,16 +2,19 @@
 	<%- include('./partials/header.ejs') %>
 	<body>
 		<%- include('./partials/nav.ejs') %>
-		<p>Hello this is some plain text.</p>
-
-		<div class="images">
-			<img src="/QAP3/media/dune.jpg" alt="Dune" />
-			<img src="/QAP3/media/the_advengers.jpg" alt="The Advengers" />
-			<img src="/QAP3/media/the_dark_knight.jpg" alt="The Dark Knight" />
-			<img src="/QAP3/media/the_joker.jpg" alt="Joker" />
-			<img src="/QAP3/media/the_matrix.jpg" alt="The Matrix" />
-			<img src="/QAP3/media/Star_wars.jpg" alt="Star Wars" />
-		</div>
+		<main>
+			<br />
+			<div>
+				<img src="/media/dune.jpg" alt="Dune" />
+				<img src="/media/the_advengers.jpg" alt="The Advengers" />
+				<img src="/media/the_dark_knight.jpg" alt="The Dark Knight" />
+				<img src="/media/the_joker.jpg" alt="Joker" />
+				<img src="/media/the_matrix.jpg" alt="The Matrix" />
+				<img src="/media/Star_wars.jpg" alt="Star Wars" />
+				<img src="/media/the_goonies.jpg" alt="The Goonies" />
+				<img src="/media/revenge_of_the_nerds.jpg" alt="Revenge of the Nerds" />
+			</div>
+		</main>
 	</body>
 	<%- include('./partials/footer.ejs') %>
 </html>
