--- a/QAP3/views/home.ejs
+++ b/QAP3/views/home.ejs
@@ -4,7 +4,7 @@
 		<%- include('./partials/nav.ejs') %>
 		<main>
 			<br />
-			<div>
+			<div class="images">
 				<img src="/media/dune.jpg" alt="Dune" />
 				<img src="/media/the_advengers.jpg" alt="The Advengers" />
 				<img src="/media/the_dark_knight.jpg" alt="The Dark Knight" />
@@ -13,6 +13,10 @@
 				<img src="/media/Star_wars.jpg" alt="Star Wars" />
 				<img src="/media/the_goonies.jpg" alt="The Goonies" />
 				<img src="/media/revenge_of_the_nerds.jpg" alt="Revenge of the Nerds" />
+				<img src="/media/john_wick.jpg" alt="Revenge of the Nerds" />
+				<img src="/media/interstellar.jpg" alt="Revenge of the Nerds" />
+				<img src="/media/the_trueman_show.jpg" alt="The Trueman Show" />
+				<img src="/media/pulp_fiction.jpg" alt="Pulp Fiction" />
 			</div>
 		</main>
 	</body>
