--- a/QAP3/views/stores.ejs
+++ b/QAP3/views/stores.ejs
@@ -2,7 +2,7 @@
 	<%- include('./partials/header.ejs') %>
 	<body>
 		<%- include('./partials/nav.ejs') %>
-		<div class="stores content">
+		<div class="stores_content">
 			<h2>Our locations</h2>
 			<% if (stores.length > 0) { %> <% stores.forEach(store => { %>
 			<p class="store">
