--- a/QAP3/public/styles.css
+++ b/QAP3/public/styles.css
@@ -1,12 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Barcode+39+Text&family=Roboto:wght@700&display=swap');
+
+/* DVD RENTALS */
+.title {
+	font-family: 'Libre Barcode 39 Text', cursive;
+	font-size: 4em;
+	font-weight: 700;
+	color: #fff;
+	display: flex;
+	align-items: left;
+}
+
+.buttons {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	margin-top: 1em;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
 body {
-	max-width: 1200px;
-	margin: 20px auto;
-	padding: 0 20px;
+	margin: 40px auto;
+	padding: 0px;
 	font-family: 'Roboto', sans-serif;
-	max-width: 1200px;
+	max-width: 80vw;
 	background-color: #212121;
 }
+/* 
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+} */
+
+.images {
+	max-width: 100vw;
+	margin-left: 40 auto;
+	padding-left: 40px;
+}
+
 a:hover {
 	color: grey;
 }
@@ -28,14 +63,27 @@ b {
 	text-decoration: underline;
 }
 /* nav & footer styles */
+
+.navbar {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
 nav {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	margin-bottom: 40px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #ddd;
 	text-transform: uppercase;
 }
+
+#right_button {
+	margin-right: 200px;
+}
+
 nav ul {
 	display: flex;
 	justify-content: space-between;
@@ -65,76 +113,23 @@ h3 {
 	text-transform: capitalize;
 	margin-bottom: 6px;
 }
-.content {
-	margin-left: 20px;
-}
-/* index styles */
-/* details styles */
-/* create styles */
-.create form {
-	max-width: 400px;
-	margin: 0 auto;
-}
-.create input,
-.create textarea {
-	display: block;
-	width: 100%;
-	margin: 10px 0;
-	padding: 8px;
-}
-.create label {
-	display: block;
-	margin-top: 24px;
-}
-textarea {
-	height: 120px;
-}
-.create button {
+
+/* stores page */
+.stores_content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	margin-top: 20px;
-	background: crimson;
-	color: white;
-	padding: 6px;
-	border: 0;
-	font-size: 1.2em;
-	cursor: pointer;
-}
-/* .dropbtn {
-	background-color: #04aa6d;
-	color: white;
-	padding: 8px;
-	font-size: 12px;
-	border: none;
-} */
-
-/* .dropdown {
-	position: relative;
-	display: inline-block;
-} */
-
-/* .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 120px;
-	box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
-	z-index: 1;
-} */
-
-/* .dropdown-content a {
-	color: #fff;
-	padding: 6px 8px;
-	text-decoration: none;
-	display: block;
-} */
-
-.dropdown-content a:hover {
-	background-color: #ddd;
+	margin-bottom: 20px;
 }
 
-.dropdown:hover .dropdown-content {
-	display: block;
+.store {
+	margin-bottom: 20px;
 }
 
-.dropdown:hover .dropbtn {
-	background-color: #3e8e41;
+.store a {
+	margin-right: 20px;
+	align-items: left;
+	justify-content: left;
 }
