--- a/QAP3/views/partials/nav.ejs
+++ b/QAP3/views/partials/nav.ejs
@@ -1,8 +1,5 @@
 <nav>
-	<h1>DVD Rentals</h1>
-	<!-- <h2>We have what you need!</h2> -->
-	<a href="/">[home]</a>
-	<a href="/stores">[stores]</a>
-	<!-- <a href="/rentalFilms">[Rental Films]</a> -->
-	<!-- <a href="/about">[about]</a> -->
+	<div><h1 class="title">DVD Rentals</h1></div>
+	<div><a href="/">HOME</a></div>
+	<div id="right_button"><a href="/stores">STORES</a></div>
 </nav>
