--- a/QAP3/views/home.ejs
+++ b/QAP3/views/home.ejs
@@ -13,8 +13,8 @@
 				<img src="/media/Star_wars.jpg" alt="Star Wars" />
 				<img src="/media/the_goonies.jpg" alt="The Goonies" />
 				<img src="/media/revenge_of_the_nerds.jpg" alt="Revenge of the Nerds" />
-				<img src="/media/john_wick.jpg" alt="Revenge of the Nerds" />
-				<img src="/media/interstellar.jpg" alt="Revenge of the Nerds" />
+				<img src="/media/john_wick.jpg" alt="John Wick" />
+				<img src="/media/interstellar.jpg" alt="interstella" />
 				<img src="/media/the_trueman_show.jpg" alt="The Trueman Show" />
 				<img src="/media/pulp_fiction.jpg" alt="Pulp Fiction" />
 			</div>
